# sdr-signal-analyzer

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
docs/: api.md  architecture.md  benchmarking.md  case-studies.md  code-symbol-mapping.md  diagnostics.md  hardware-validation.md  hardware_validation_plan.md  hardware_validation_report_template.md  hardware_validation_status.md  index.md  limitations.md  notation.md  proof.md  quality-evidence.md  release.md  release_checklist.md  replay-and-recording.md  stability.md  terminology.md  testing.md  troubleshooting.md  workflows.md
docs/sources/: README.md  index.md  rtltcp.md  soapy.md  uhd.md
docs/templates/: hardware_validation_report_template.md
examples/: run_simulator.py
include/sdr_analyzer/: config.hpp  results.hpp  session.hpp
python/: bindings.cpp
python/sdr_signal_analyzer/: __init__.py  __main__.py  cli.py  demo.py  export.py  gui.py
scripts/: benchmark_ci.py  generate_portfolio_assets.py  install_smoke_ubuntu.sh  python_coverage.py  release_validate.py
src/cli/: main.cpp
src/core/: session.cpp
src/dsp/: analyzer.cpp  analyzer.hpp  fft.cpp  fft.hpp
src/io/: metadata.cpp  metadata.hpp  recorder.cpp  recorder.hpp
src/sdr/: replay_source.cpp  replay_source.hpp  rtltcp_source.cpp  rtltcp_source.hpp  simulator_source.cpp  simulator_source.hpp  soapy_source.cpp  source.hpp  source_factory.cpp  source_factory.hpp  uhd_source.cpp  uhd_source.hpp
tests/: export_schema.py  test_cli_export.py  test_cli_wrapper.py  test_demo.py  test_diagnostics.py  test_export_helper.py  test_gui_validation.py  test_pipeline.cpp  test_python_docstrings.py  test_record_replay.cpp  test_release_validation_script.py  test_rtltcp.cpp  test_screenshot_assets.py  test_session.cpp
tests/fixtures/: README.md  burst.sigmf-data  clipped.sigmf-data  multi_tone.sigmf-data  single_tone.sigmf-data  tone_cf32.bin.json  tone_cf32.sigmf-meta  weak.sigmf-data  wideband.sigmf-data  wideband.sigmf-meta
